# R4C_Test

./: README.md  pyproject.toml
R4C/: settings.py  urls.py
customers/migrations/: 0002_alter_customer_id.py
orders/: models.py
orders/migrations/: 0002_alter_order_id.py  0002_rename_customer_order_customer_id_and_more.py  0003_rename_customer_id_order_customer.py  0004_remove_order_created_at_remove_order_robot_and_more.py
robots/: models.py  signals.py  tests.py  urls.py  views.py
robots/migrations/: 0002_alter_robot_id.py
